WM-1571: Make the CBAS APIs method based (#89)